# eleve

./: LICENSE  README.md  database.db  docker-compose.yaml  pyproject.toml
eleve/cli/: cli.py
eleve/database/: __init__.py  db.py
eleve/docs/: cli.md  cli_commands.md  domain.md
eleve/repository/: task.py
eleve/tests/test_database/: test_db.py
migrations/: env.py
migrations/versions/: 845be58b64ba_create_task_table.py
