[tool.poetry]
name = "eleve"
version = "0.1.0"
description = "An incredible task-management system!"
authors = ["André Carvalho <alac1984@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {"include" = "eleve"}
]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.8"
sqlmodel = "^0.0.22"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pynvim = "^0.5.2"
black = "^24.10.0"
mypy = "^1.14.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
eleve = "eleve.cli.cli:cli"
